--- a/OldiOSExperience/Pages/Springboard/Springboard.razor
+++ b/OldiOSExperience/Pages/Springboard/Springboard.razor
@@ -2,7 +2,7 @@
 
 <div class="springboard-container">
     <!-- Wallpaper -->
-    <img src="images/wallpaper.jpg" class="wallpaper" alt="Wallpaper"/>
+    <img src="images/wallpaper.png" class="wallpaper" alt="Wallpaper"/>
 
     <!-- Status Bar (using our rem units) -->
     <div class="status-bar">
