--- a/OldiOSExperience/wwwroot/css/app.css
+++ b/OldiOSExperience/wwwroot/css/app.css
@@ -129,7 +129,7 @@ code {
 
 .springboard-container.app-is-open .app-icon,
 .springboard-container.debug-animation .app-icon {
-    transform: translate(var(--scatter-x, 0), var(--scatter-y, 0)) !important;
+    transform: translate(calc(var(--scatter-x, 0) * 2), calc(var(--scatter-y, 0) * 2)) !important;
     opacity: 0 !important;
     /* Override: ease-in for outward animation (icons flying out) */
     transition: transform 0.4s ease-in, 
