--- a/OldiOSExperience/Pages/Springboard/Components/AppContainer.razor.css
+++ b/OldiOSExperience/Pages/Springboard/Components/AppContainer.razor.css
@@ -55,6 +55,10 @@
     animation: appClose 0.4s ease-in forwards;
 }
 
+.app-container ::deep .status-bar {
+    opacity: 1 !important;
+}
+
 @keyframes appClose {
     0% {
         transform: scale(1);
