more misc stuff

--- a/OldiOSExperience/Pages/Springboard/Components/AppContainer.razor
+++ b/OldiOSExperience/Pages/Springboard/Components/AppContainer.razor
@@ -10,7 +10,7 @@
     @if (CurrentApp != null || isAnimating)
     {
         <!-- Status Bar - shown in all apps -->
-        <OldiOSExperience.System.StatusBar Style="OldiOSExperience.System.StatusBarStyle.Black" />
+        <OldiOSExperience.System.StatusBar Style="OldiOSExperience.System.StatusBarStyle.Coloured" />
         
         <div class="app-content">
             @if (displayedApp != null)
