--- a/OldiOSExperience/Pages/Springboard/Springboard.razor
+++ b/OldiOSExperience/Pages/Springboard/Springboard.razor
@@ -7,7 +7,7 @@
 
 <div class="springboard-container @(isAppOpen ? "app-is-open" : "") @(isAppSwitcherVisible ? "switcher-visible" : "") @(debugAnimationActive ? "debug-animation" : "")">
     <!-- Wallpaper -->
-    <img src="images/wallpaper.png" class="wallpaper" alt="Wallpaper"/>
+    <div class="wallpaper" alt="Wallpaper"/>
 
     <!-- Debug Animation Toggle Button -->
     <button class="debug-animation-button" @onclick="ToggleDebugAnimation">
