--- a/OldiOSExperience/System/StatusBar.razor
+++ b/OldiOSExperience/System/StatusBar.razor
@@ -2,7 +2,7 @@
 
 @* iOS 5 Status Bar Component *@
 
-<div class="status-bar @(Style == StatusBarStyle.Black ? "status-bar-black" : "status-bar-default")">
+<div class="status-bar @(Style == StatusBarStyle.Coloured ? "status-bar-coloured" : "status-bar-default")">
     <div class="status-bar-left">
         <!-- Carrier -->
         <span class="carrier-text">@Carrier</span>
