--- a/OldiOSExperience/Pages/Springboard/Springboard.razor.css
+++ b/OldiOSExperience/Pages/Springboard/Springboard.razor.css
@@ -123,8 +123,23 @@
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    background-image: url(/images/wallpaper.png);
+    background-size: cover;
     z-index: 0;
+}
+.wallpaper::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(/images/wallpaper_gradient_bottom.png);
+    background-repeat: repeat-x;
+    background-size: auto;
+    background-position: bottom;
+    z-index: 100;
+    pointer-events: none;
 }
 
 /* Status bar styling moved to StatusBar.razor.css */
@@ -247,8 +262,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(/images/dock_background.png) no-repeat center bottom;
-    background-size: cover;
+    background: url(/images/dock.png) no-repeat center bottom;
+    background-size: contain;
 }
 
 .dock-icons {
