--- a/OldiOSExperience/System/StatusBar.razor.css
+++ b/OldiOSExperience/System/StatusBar.razor.css
@@ -17,13 +17,13 @@
 
 /* Default style - semi-transparent for home screen */
 .status-bar-default {
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.3));
+    background-color:  rgba(0,0,0,0.6);
     color: white;
     text-shadow: 0 1px 2px rgba(0,0,0,0.8);
 }
 
-/* Black style - solid black for apps */
-.status-bar-black {
+/* Coloured style - for apps */
+.status-bar-coloured {
     background-color: #000000;
     color: white;
     text-shadow: none;
