--- a/OldiOSExperience/System/AppSwitcher.razor.css
+++ b/OldiOSExperience/System/AppSwitcher.razor.css
@@ -7,6 +7,11 @@
     z-index: 150;
     display: flex;
     flex-direction: column;
+    pointer-events: none;
+}
+
+.app-switcher.visible {
+    pointer-events: all;
 }
 
 .app-switcher-dismiss {
@@ -44,7 +49,7 @@
 
 .recent-app-card {
     flex-shrink: 0;
-    width: 120px;
+    width: 140px;
     display: flex;
     flex-direction: column;
     align-items: center;
