--- a/OldiOSExperience/Pages/Springboard/Components/AppIcon.razor
+++ b/OldiOSExperience/Pages/Springboard/Components/AppIcon.razor
@@ -1,6 +1,7 @@
 @using OldiOSExperience.Models
+@inject IJSRuntime JSRuntime
 
-<div class="app-icon" @onclick="HandleClick">
+<div @ref="iconElement" class="app-icon" @onclick="HandleClick">
     <div class="icon-image" style="background-image: url(@App.IconPath)"></div>
     <span>@App.Name</span>
 </div>
@@ -12,8 +13,20 @@
     [Parameter]
     public EventCallback<AppInfo> OnAppClick { get; set; }
     
+    private ElementReference iconElement;
+
     private async Task HandleClick()
     {
         await OnAppClick.InvokeAsync(App);
+    }
+
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            // Calculate and set the scatter vector for this specific icon
+            await JSRuntime.InvokeVoidAsync("calculateScatterVector", iconElement);
+        }
     }
 }
