--- a/OldiOSExperience/Pages/Springboard/Components/LockScreen.razor
+++ b/OldiOSExperience/Pages/Springboard/Components/LockScreen.razor
@@ -18,7 +18,7 @@
     <div class="lock-wallpaper" alt="Wallpaper"/>
 
     <!-- Status bar at top -->
-    <OldiOSExperience.System.StatusBar Style="OldiOSExperience.System.StatusBarStyle.Default" />
+    <OldiOSExperience.System.StatusBar Style="OldiOSExperience.System.StatusBarStyle.WhiteOnBlackEtch" />
     
     <!-- Large time and date display in center -->
     <div class="lock-status-bar">
