--- a/OldiOSExperience/Pages/Springboard/Springboard.razor
+++ b/OldiOSExperience/Pages/Springboard/Springboard.razor
@@ -15,7 +15,7 @@
     </button>
 
     <!-- Status Bar -->
-    <OldiOSExperience.System.StatusBar Style="OldiOSExperience.System.StatusBarStyle.Default" />
+    <OldiOSExperience.System.StatusBar Style="OldiOSExperience.System.StatusBarStyle.WhiteOnBlackEtch" />
 
     <!-- Pages Container (the part that swipes) -->
     <div class="springboard-pages-container"
